src/antlr/SYSYParser.cpp

// Generated from /home/carbon/code/compiler_guas/grammar/SYSYParser.g4 by ANTLR 4.12.0


#include "SYSYParserListener.h"
#include "SYSYParserVisitor.h"

#include "SYSYParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct SYSYParserStaticData final {
  SYSYParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  SYSYParserStaticData(const SYSYParserStaticData&) = delete;
  SYSYParserStaticData(SYSYParserStaticData&&) = delete;
  SYSYParserStaticData& operator=(const SYSYParserStaticData&) = delete;
  SYSYParserStaticData& operator=(SYSYParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag sysyparserParserOnceFlag;
SYSYParserStaticData *sysyparserParserStaticData = nullptr;

void sysyparserParserInitialize() {
  assert(sysyparserParserStaticData == nullptr);
  auto staticData = std::make_unique<SYSYParserStaticData>(
    std::vector<std::string>{
      "compilationUnit", "decl", "constdecl", "constdef", "init", "vardecl", 
      "vardef", "funcdef", "funcFparams", "funcFparam", "functype", "typeId", 
      "block", "stmt", "lval", "cond", "exp", "number"
    },
    std::vector<std::string>{
      "", "','", "';'", "'='", "'['", "']'", "'{'", "'}'", "'('", "')'", 
      "'if'", "'else'", "'while'", "'const'", "'=='", "'!='", "'<'", "'>'", 
      "'<='", "'>='", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'&&'", 
      "'||'", "'int'", "'float'", "'void'", "", "", "", "'break'", "'continue'", 
      "'return'"
    },
    std::vector<std::string>{
      "", "Comma", "SemiColon", "Assign", "LeftBracket", "RightBracket", 
      "LeftBrace", "RightBrace", "LeftParen", "RightParen", "If", "Else", 
      "While", "Const", "Equal", "NonEqual", "Less", "Greater", "LessEqual", 
      "GreaterEqual", "Plus", "Minus", "Multiply", "Divide", "Modulo", "Not", 
      "And", "Or", "Int", "Float", "Void", "Identifier", "FloatConst", "IntConst", 
      "Break", "Continue", "Return", "LineComment", "BlockComment", "WhiteSpace"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  sysyparserParserStaticData = staticData.release();
}

}

SYSYParser::SYSYParser(TokenStream *input) : SYSYParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

SYSYParser::SYSYParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  SYSYParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *sysyparserParserStaticData->atn, sysyparserParserStaticData->decisionToDFA, sysyparserParserStaticData->sharedContextCache, options);
}

SYSYParser::~SYSYParser() {
  delete _interpreter;
}

const atn::ATN& SYSYParser::getATN() const {
  return *sysyparserParserStaticData->atn;
}

std::string SYSYParser::getGrammarFileName() const {
  return "SYSYParser.g4";
}

const std::vector<std::string>& SYSYParser::getRuleNames() const {
  return sysyparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& SYSYParser::getVocabulary() const {
  return sysyparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView SYSYParser::getSerializedATN() const {
  return sysyparserParserStaticData->serializedATN;
}


//----------------- CompilationUnitContext ------------------------------------------------------------------

SYSYParser::CompilationUnitContext::CompilationUnitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<SYSYParser::DeclContext *> SYSYParser::CompilationUnitContext::decl() {
  return getRuleContexts<SYSYParser::DeclContext>();
}

SYSYParser::DeclContext* SYSYParser::CompilationUnitContext::decl(size_t i) {
  return getRuleContext<SYSYParser::DeclContext>(i);
}

std::vector<SYSYParser::FuncdefContext *> SYSYParser::CompilationUnitContext::funcdef() {
  return getRuleContexts<SYSYParser::FuncdefContext>();
}

SYSYParser::FuncdefContext* SYSYParser::CompilationUnitContext::funcdef(size_t i) {
  return getRuleContext<SYSYParser::FuncdefContext>(i);
}


size_t SYSYParser::CompilationUnitContext::getRuleIndex() const {
  return SYSYParser::RuleCompilationUnit;
}

void SYSYParser::CompilationUnitContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SYSYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCompilationUnit(this);
}

void SYSYParser::CompilationUnitContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SYSYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCompilationUnit(this);
}


std::any SYSYParser::CompilationUnitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SYSYParserVisitor*>(visitor))
    return parserVisitor->visitCompilationUnit(this);
  else
    return visitor->visitChildren(this);
}

SYSYParser::CompilationUnitContext* SYSYParser::compilationUnit() {
  CompilationUnitContext *_localctx = _tracker.createInstance<CompilationUnitContext>(_ctx, getState());
  enterRule(_localctx, 0, SYSYParser::RuleCompilationUnit);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(38); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(38);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
      case 1: {
        setState(36);
        decl();
        break;
      }

      case 2: {
        setState(37);
        funcdef();
        break;
      }

      default:
        break;
      }
      setState(40); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 1879056384) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclContext ------------------------------------------------------------------

SYSYParser::DeclContext::DeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SYSYParser::ConstdeclContext* SYSYParser::DeclContext::constdecl() {
  return getRuleContext<SYSYParser::ConstdeclContext>(0);
}

SYSYParser::VardeclContext* SYSYParser::DeclContext::vardecl() {
  return getRuleContext<SYSYParser::VardeclContext>(0);
}


size_t SYSYParser::DeclContext::getRuleIndex() const {
  return SYSYParser::RuleDecl;
}

void SYSYParser::DeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SYSYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDecl(this);
}

void SYSYParser::DeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SYSYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDecl(this);
}


std::any SYSYParser::DeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SYSYParserVisitor*>(visitor))
    return parserVisitor->visitDecl(this);
  else
    return visitor->visitChildren(this);
}

SYSYParser::DeclContext* SYSYParser::decl() {
  DeclContext *_localctx = _tracker.createInstance<DeclContext>(_ctx, getState());
  enterRule(_localctx, 2, SYSYParser::RuleDecl);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(44);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SYSYParser::Const: {
        enterOuterAlt(_localctx, 1);
        setState(42);
        constdecl();
        break;
      }

      case SYSYParser::Int:
      case SYSYParser::Float: {
        enterOuterAlt(_localctx, 2);
        setState(43);
        vardecl();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstdeclContext ------------------------------------------------------------------

SYSYParser::ConstdeclContext::ConstdeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SYSYParser::ConstdeclContext::Const() {
  return getToken(SYSYParser::Const, 0);
}

std::vector<SYSYParser::ConstdefContext *> SYSYParser::ConstdeclContext::constdef() {
  return getRuleContexts<SYSYParser::ConstdefContext>();
}

SYSYParser::ConstdefContext* SYSYParser::ConstdeclContext::constdef(size_t i) {
  return getRuleContext<SYSYParser::ConstdefContext>(i);
}

tree::TerminalNode* SYSYParser::ConstdeclContext::SemiColon() {
  return getToken(SYSYParser::SemiColon, 0);
}

tree::TerminalNode* SYSYParser::ConstdeclContext::Int() {
  return getToken(SYSYParser::Int, 0);
}

tree::TerminalNode* SYSYParser::ConstdeclContext::Float() {
  return getToken(SYSYParser::Float, 0);
}

std::vector<tree::TerminalNode *> SYSYParser::ConstdeclContext::Comma() {
  return getTokens(SYSYParser::Comma);
}

tree::TerminalNode* SYSYParser::ConstdeclContext::Comma(size_t i) {
  return getToken(SYSYParser::Comma, i);
}


size_t SYSYParser::ConstdeclContext::getRuleIndex() const {
  return SYSYParser::RuleConstdecl;
}

void SYSYParser::ConstdeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SYSYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConstdecl(this);
}

void SYSYParser::ConstdeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SYSYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConstdecl(this);
}


std::any SYSYParser::ConstdeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SYSYParserVisitor*>(visitor))
    return parserVisitor->visitConstdecl(this);
  else
    return visitor->visitChildren(this);
}

SYSYParser::ConstdeclContext* SYSYParser::constdecl() {
  ConstdeclContext *_localctx = _tracker.createInstance<ConstdeclContext>(_ctx, getState());
  enterRule(_localctx, 4, SYSYParser::RuleConstdecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(46);
    match(SYSYParser::Const);
    setState(47);
    _la = _input->LA(1);
    if (!(_la == SYSYParser::Int

    || _la == SYSYParser::Float)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(48);
    constdef();
    setState(53);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == SYSYParser::Comma) {
      setState(49);
      match(SYSYParser::Comma);
      setState(50);
      constdef();
      setState(55);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(56);
    match(SYSYParser::SemiColon);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstdefContext ------------------------------------------------------------------

SYSYParser::ConstdefContext::ConstdefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SYSYParser::ConstdefContext::Identifier() {
  return getToken(SYSYParser::Identifier, 0);
}

tree::TerminalNode* SYSYParser::ConstdefContext::Assign() {
  return getToken(SYSYParser::Assign, 0);
}

SYSYParser::InitContext* SYSYParser::ConstdefContext::init() {
  return getRuleContext<SYSYParser::InitContext>(0);
}

std::vector<tree::TerminalNode *> SYSYParser::ConstdefContext::LeftBracket() {
  return getTokens(SYSYParser::LeftBracket);
}

tree::TerminalNode* SYSYParser::ConstdefContext::LeftBracket(size_t i) {
  return getToken(SYSYParser::LeftBracket, i);
}

std::vector<SYSYParser::ExpContext *> SYSYParser::ConstdefContext::exp() {
  return getRuleContexts<SYSYParser::ExpContext>();
}

SYSYParser::ExpContext* SYSYParser::ConstdefContext::exp(size_t i) {
  return getRuleContext<SYSYParser::ExpContext>(i);
}

std::vector<tree::TerminalNode *> SYSYParser::ConstdefContext::RightBracket() {
  return getTokens(SYSYParser::RightBracket);
}

tree::TerminalNode* SYSYParser::ConstdefContext::RightBracket(size_t i) {
  return getToken(SYSYParser::RightBracket, i);
}


size_t SYSYParser::ConstdefContext::getRuleIndex() const {
  return SYSYParser::RuleConstdef;
}

void SYSYParser::ConstdefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SYSYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConstdef(this);
}

void SYSYParser::ConstdefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SYSYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConstdef(this);
}


std::any SYSYParser::ConstdefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SYSYParserVisitor*>(visitor))
    return parserVisitor->visitConstdef(this);
  else
    return visitor->visitChildren(this);
}

SYSYParser::ConstdefContext* SYSYParser::constdef() {
  ConstdefContext *_localctx = _tracker.createInstance<ConstdefContext>(_ctx, getState());
  enterRule(_localctx, 6, SYSYParser::RuleConstdef);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(73);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(58);
      match(SYSYParser::Identifier);
      setState(59);
      match(SYSYParser::Assign);
      setState(60);
      init();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(61);
      match(SYSYParser::Identifier);
      setState(66); 
      _errHandler->sync(this);
      _la = _input->LA(1);
      do {
        setState(62);
        match(SYSYParser::LeftBracket);
        setState(63);
        exp(0);
        setState(64);
        match(SYSYParser::RightBracket);
        setState(68); 
        _errHandler->sync(this);
        _la = _input->LA(1);
      } while (_la == SYSYParser::LeftBracket);
      setState(70);
      match(SYSYParser::Assign);
      setState(71);
      init();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InitContext ------------------------------------------------------------------

SYSYParser::InitContext::InitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SYSYParser::InitContext::LeftBrace() {
  return getToken(SYSYParser::LeftBrace, 0);
}

tree::TerminalNode* SYSYParser::InitContext::RightBrace() {
  return getToken(SYSYParser::RightBrace, 0);
}

std::vector<SYSYParser::InitContext *> SYSYParser::InitContext::init() {
  return getRuleContexts<SYSYParser::InitContext>();
}

SYSYParser::InitContext* SYSYParser::InitContext::init(size_t i) {
  return getRuleContext<SYSYParser::InitContext>(i);
}

std::vector<tree::TerminalNode *> SYSYParser::InitContext::Comma() {
  return getTokens(SYSYParser::Comma);
}

tree::TerminalNode* SYSYParser::InitContext::Comma(size_t i) {
  return getToken(SYSYParser::Comma, i);
}

SYSYParser::ExpContext* SYSYParser::InitContext::exp() {
  return getRuleContext<SYSYParser::ExpContext>(0);
}


size_t SYSYParser::InitContext::getRuleIndex() const {
  return SYSYParser::RuleInit;
}

void SYSYParser::InitContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SYSYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInit(this);
}

void SYSYParser::InitContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SYSYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInit(this);
}


std::any SYSYParser::InitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SYSYParserVisitor*>(visitor))
    return parserVisitor->visitInit(this);
  else
    return visitor->visitChildren(this);
}

SYSYParser::InitContext* SYSYParser::init() {
  InitContext *_localctx = _tracker.createInstance<InitContext>(_ctx, getState());
  enterRule(_localctx, 8, SYSYParser::RuleInit);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(88);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SYSYParser::LeftBrace: {
        enterOuterAlt(_localctx, 1);
        setState(75);
        match(SYSYParser::LeftBrace);
        setState(84);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & 15035531584) != 0)) {
          setState(76);
          init();
          setState(81);
          _errHandler->sync(this);
          _la = _input->LA(1);
          while (_la == SYSYParser::Comma) {
            setState(77);
            match(SYSYParser::Comma);
            setState(78);
            init();
            setState(83);
            _errHandler->sync(this);
            _la = _input->LA(1);
          }
        }
        setState(86);
        match(SYSYParser::RightBrace);
        break;
      }

      case SYSYParser::LeftParen:
      case SYSYParser::Plus:
      case SYSYParser::Minus:
      case SYSYParser::Identifier:
      case SYSYParser::FloatConst:
      case SYSYParser::IntConst: {
        enterOuterAlt(_localctx, 2);
        setState(87);
        exp(0);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VardeclContext ------------------------------------------------------------------

SYSYParser::VardeclContext::VardeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<SYSYParser::VardefContext *> SYSYParser::VardeclContext::vardef() {
  return getRuleContexts<SYSYParser::VardefContext>();
}

SYSYParser::VardefContext* SYSYParser::VardeclContext::vardef(size_t i) {
  return getRuleContext<SYSYParser::VardefContext>(i);
}

tree::TerminalNode* SYSYParser::VardeclContext::SemiColon() {
  return getToken(SYSYParser::SemiColon, 0);
}

tree::TerminalNode* SYSYParser::VardeclContext::Int() {
  return getToken(SYSYParser::Int, 0);
}

tree::TerminalNode* SYSYParser::VardeclContext::Float() {
  return getToken(SYSYParser::Float, 0);
}

std::vector<tree::TerminalNode *> SYSYParser::VardeclContext::Comma() {
  return getTokens(SYSYParser::Comma);
}

tree::TerminalNode* SYSYParser::VardeclContext::Comma(size_t i) {
  return getToken(SYSYParser::Comma, i);
}


size_t SYSYParser::VardeclContext::getRuleIndex() const {
  return SYSYParser::RuleVardecl;
}

void SYSYParser::VardeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SYSYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVardecl(this);
}

void SYSYParser::VardeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SYSYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVardecl(this);
}


std::any SYSYParser::VardeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SYSYParserVisitor*>(visitor))
    return parserVisitor->visitVardecl(this);
  else
    return visitor->visitChildren(this);
}

SYSYParser::VardeclContext* SYSYParser::vardecl() {
  VardeclContext *_localctx = _tracker.createInstance<VardeclContext>(_ctx, getState());
  enterRule(_localctx, 10, SYSYParser::RuleVardecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(90);
    _la = _input->LA(1);
    if (!(_la == SYSYParser::Int

    || _la == SYSYParser::Float)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(91);
    vardef();
    setState(96);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == SYSYParser::Comma) {
      setState(92);
      match(SYSYParser::Comma);
      setState(93);
      vardef();
      setState(98);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(99);
    match(SYSYParser::SemiColon);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VardefContext ------------------------------------------------------------------

SYSYParser::VardefContext::VardefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SYSYParser::VardefContext::Identifier() {
  return getToken(SYSYParser::Identifier, 0);
}

std::vector<tree::TerminalNode *> SYSYParser::VardefContext::LeftBracket() {
  return getTokens(SYSYParser::LeftBracket);
}

tree::TerminalNode* SYSYParser::VardefContext::LeftBracket(size_t i) {
  return getToken(SYSYParser::LeftBracket, i);
}

std::vector<SYSYParser::ExpContext *> SYSYParser::VardefContext::exp() {
  return getRuleContexts<SYSYParser::ExpContext>();
}

SYSYParser::ExpContext* SYSYParser::VardefContext::exp(size_t i) {
  return getRuleContext<SYSYParser::ExpContext>(i);
}

std::vector<tree::TerminalNode *> SYSYParser::VardefContext::RightBracket() {
  return getTokens(SYSYParser::RightBracket);
}

tree::TerminalNode* SYSYParser::VardefContext::RightBracket(size_t i) {
  return getToken(SYSYParser::RightBracket, i);
}

tree::TerminalNode* SYSYParser::VardefContext::Assign() {
  return getToken(SYSYParser::Assign, 0);
}

SYSYParser::InitContext* SYSYParser::VardefContext::init() {
  return getRuleContext<SYSYParser::InitContext>(0);
}


size_t SYSYParser::VardefContext::getRuleIndex() const {
  return SYSYParser::RuleVardef;
}

void SYSYParser::VardefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SYSYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVardef(this);
}

void SYSYParser::VardefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SYSYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVardef(this);
}


std::any SYSYParser::VardefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SYSYParserVisitor*>(visitor))
    return parserVisitor->visitVardef(this);
  else
    return visitor->visitChildren(this);
}

SYSYParser::VardefContext* SYSYParser::vardef() {
  VardefContext *_localctx = _tracker.createInstance<VardefContext>(_ctx, getState());
  enterRule(_localctx, 12, SYSYParser::RuleVardef);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(126);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 12, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(101);
      match(SYSYParser::Identifier);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(102);
      match(SYSYParser::Identifier);
      setState(107); 
      _errHandler->sync(this);
      _la = _input->LA(1);
      do {
        setState(103);
        match(SYSYParser::LeftBracket);
        setState(104);
        exp(0);
        setState(105);
        match(SYSYParser::RightBracket);
        setState(109); 
        _errHandler->sync(this);
        _la = _input->LA(1);
      } while (_la == SYSYParser::LeftBracket);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(111);
      match(SYSYParser::Identifier);
      setState(112);
      match(SYSYParser::Assign);
      setState(113);
      init();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(114);
      match(SYSYParser::Identifier);
      setState(119); 
      _errHandler->sync(this);
      _la = _input->LA(1);
      do {
        setState(115);
        match(SYSYParser::LeftBracket);
        setState(116);
        exp(0);
        setState(117);
        match(SYSYParser::RightBracket);
        setState(121); 
        _errHandler->sync(this);
        _la = _input->LA(1);
      } while (_la == SYSYParser::LeftBracket);
      setState(123);
      match(SYSYParser::Assign);
      setState(124);
      init();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncdefContext ------------------------------------------------------------------

SYSYParser::FuncdefContext::FuncdefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SYSYParser::FunctypeContext* SYSYParser::FuncdefContext::functype() {
  return getRuleContext<SYSYParser::FunctypeContext>(0);
}

tree::TerminalNode* SYSYParser::FuncdefContext::Identifier() {
  return getToken(SYSYParser::Identifier, 0);
}

tree::TerminalNode* SYSYParser::FuncdefContext::LeftParen() {
  return getToken(SYSYParser::LeftParen, 0);
}

tree::TerminalNode* SYSYParser::FuncdefContext::RightParen() {
  return getToken(SYSYParser::RightParen, 0);
}

SYSYParser::BlockContext* SYSYParser::FuncdefContext::block() {
  return getRuleContext<SYSYParser::BlockContext>(0);
}

SYSYParser::FuncFparamsContext* SYSYParser::FuncdefContext::funcFparams() {
  return getRuleContext<SYSYParser::FuncFparamsContext>(0);
}


size_t SYSYParser::FuncdefContext::getRuleIndex() const {
  return SYSYParser::RuleFuncdef;
}

void SYSYParser::FuncdefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SYSYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFuncdef(this);
}

void SYSYParser::FuncdefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SYSYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFuncdef(this);
}


std::any SYSYParser::FuncdefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SYSYParserVisitor*>(visitor))
    return parserVisitor->visitFuncdef(this);
  else
    return visitor->visitChildren(this);
}

SYSYParser::FuncdefContext* SYSYParser::funcdef() {
  FuncdefContext *_localctx = _tracker.createInstance<FuncdefContext>(_ctx, getState());
  enterRule(_localctx, 14, SYSYParser::RuleFuncdef);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(128);
    functype();
    setState(129);
    match(SYSYParser::Identifier);
    setState(130);
    match(SYSYParser::LeftParen);
    setState(132);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SYSYParser::Int
